# rustaceans

./: .clang-format  .gitattributies  .gitignore  .gitlab-ci.yml  .gitpod.yml  Cargo.toml  LICENSE  doc.md  gitp.sh  rdef.h  rdeft.c  rust_impl.h  rustdef.h  test.c
.gitlab/: .gitlab-webide.yml
awaits/: Cargo.toml
awaits/src/: lib.rs
base16/: Cargo.toml
base16/src/: base16.rs  main.rs
base32/: Cargo.toml  base32.hpp
base32/src/: base32.rs  lib.rs  main.rs
base64/: .gitignore  Cargo.toml
base64/src/: base64.rs  lib.rs  main.rs  test.html  test_no_wrap.rs  test_ret_wrap.txt  test_url_safe.rs  test_wrap.rs
base64/tests/: test_no_wrap.rs  test_url_safe.rs  test_wrap.rs
base64/tests/res/: test_ret_no_wrap.txt
cityhash/: Cargo.toml  build.rs
cityhash/src/: int128.rs  lib.rs
cityhash/src/cc-source/: city-test.cc  city.cc  city.h
cityhash/src/google/: city.cc  city.h
cmd-proxy/: Cargo.toml
cmdprox/: Cargo.toml
demo/: Cargo.toml  a.out
demo/src/: ___main.rs  __main.rs  _main.rs  comb_sum.rs  demo.c  main.rs  process_bar.rs  stream.rs
fblock/: Cargo.toml
fblock/src/: blockopt.rs  cli.rs  hash.rs  main.rs  sha512sum.rs  splinfo.rs
fblock/tests/res/: x.exef.sha512
ferris-says/: Cargo.toml
fmedia/: Cargo.toml
fmedia/src/: data.rs  lib.rs  main.rs
fsplit/: Cargo.toml
fsplit/src/: blockopt.rs  cli.rs  main.rs  splinfo.rs
genqrsvg/: Cargo.toml
genqrsvg/src/: main.rs
gitp/: Cargo.toml
gitp/src/: main.rs
hello-rocket/: Cargo.toml  Rocket.toml  hello-rocket-startup.sh  hello-rocket-stop.sh
hello-rocket/src/: fairing.rs  main.rs  mysql_access.rs  mysql_conn_url
hello-rocket/src/model/: items.rs  items_resp.rs  mod.rs
hello-rust/: Cargo.toml
hex-string/: Cargo.toml
hex-string/src/: hex.rs  lib.rs  main.rs
io/: Cargo.toml
io/src/: main.rs
lazy-static.rs/: Cargo.toml
lazy-static.rs/src/: core_lazy.rs  inline_lazy.rs  lazy_static.rs  main.rs
posix/: Cargo.toml
promises/: Cargo.toml
rcallc/: Cargo.toml
rcallc/src/: main.rs
rconio/: Cargo.toml
rconio/src/: cvtseq.rs  lib.rs  nt_version_nums.rs  vtesc_seq.rs  winterm.rs
regexp/: Cargo.toml
regexp/src/: main.rs
rfserv/: .gitignore  Cargo.toml
rfserv/src/: dir_viewer.html  header.rs  index_router.rs  main.rs  model.rs  not_found_temp.html  request.rs  test.http  util.rs
rfserv/src/w3c/: common.css  common.min.css  dir_viewer.js  dir_viewer.min.js  not_found.js  not_found.min.js  not_found_temp.min.html
rfserv/tests/: test.http
rgrep/: .gitignore  Cargo.toml
rgrep/src/: main.rs
rjni/: Cargo.toml  build.rs  jrun.sh
rjni/clang/: CallJNI.h  jni.h  jrun.sh  main.c
rjni/jcalls/: CallJNI.java
rjni/src/: jstr.rs  lib.rs  rbind.rs
rjni/test/: Cargo.toml
rjni/test/src/: lib.rs
rjni/test/tests/clang/: CallJNI.h  jni.h  jrun.sh  main.c  rdef.h
rjni/test/tests/jcalls/: CallJNI.java  FatalErrorTest.java  Main.java
rjni/test/tests/zig/: build.zig
rjni/test/tests/zig/src/: lib.zig  zbind.zig
rotp/: Cargo.toml
rotp/src/: generator.rs  main.rs
ruimpl/: Cargo.toml
ruimpl/src/: lib.rs
rust-call-c/: Cargo.toml
rust-grep/: Cargo.toml
rust-grep/src/: main.rs
rust-jni/: .gitignore  Cargo.toml  HelloWorld.java  Platform.java  jrun.bat  jrun.sh  rustfmt.toml
rust-jni/clang/: jni.h  jrun_macos.sh  main.c  rustdef 2.h  test.c
rust-jni/jcalls/: CallJNI.java  HelloWorld.java  Main.java
rust-jni/ndk/: jnic.h  test.c
rust-jni/src/: jdef.rs  lib.rs  mod.rs  platf.rs  rbind.rs  rjdef.rs  rust_jni_sys.rs
tcp-client/: Cargo.toml
tcp-client/src/: main.rs
tcp-server/: Cargo.toml
tcp-server/src/: main.rs
tcp_client/: Cargo.toml
tcp_client/src/: main.rs
tcp_server/: Cargo.toml
tcp_server/src/: main.rs
udp-client/src/: main.rs
udp-server/src/: main.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT  README.md
wasm-game-of-life/pkg/: package.json
wkrobot/: Cargo.toml
wkrobot/src/: focus.rs  kbd.rs  lib.rs
wkrobot/tests/: focus_test.rs  focusbin.rs  kbd_mod.rs  kbd_test.rs  kbdbin.rs  kdb_server_test.rs
xlsx-example/: .gitignore  Cargo.toml  build.rs  gitp.sh  xlsx-example
xlsx-example/.cargo/: config  config.toml
xlsx-example/src/: common_util.rs  macros.rs  main.rs  reflection.rs
xlsx-example/src/robot_generator/: case.robot  cli_parser.rs  hyper.rs  main.rs  mod.rs  one_case.rs  robot_util.rs  tpauth.rs  tpmodel.rs  tputil.rs  upgrade.rs
xlsx-example/src/robot_generator/res/: icon.rc
xlsx-example/src/util/: calamine.rs  calamine_util.rs  common.rs  hyper.rs  mod.rs
xlsx-example/tests/: exam0.xlsx  mingw.txt
xlsx-example/tests/res/: mingw-redhat.txt
xlsx-example/tests/res/upgrade/: latest.json
xlsx-example/tests/res/upgrade/macos/: xlsx-example-1.0.2.sha512  xlsx-example-1.0.3.sha512
xlsx_example/: .gitignore  Cargo.toml  gitp.sh  xlsx_example
xlsx_example/src/: case.robot  main.rs  one_case.rs  reflection.rs
xlsx_example/src/robot_generator/: case.robot  cli_parser.rs  main.rs  mod.rs  one_case.rs  robot_util.rs
xlsx_example/src/util/: calamine_util.rs
xlsx_example/tests/: tmp.json
