[package]
name = "fblock"
version = "0.1.0"
edition = "2021"
authors = ["Liangcheng Juves <email@lcjuves.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = { version = "3.1.17", features = ["derive"] }
hyper = { version = "0.14.17", features = ["http1"] }
hyper-rustls = { version = "0.23.0", git = "https://jihulab.com/LiangchengJ/hyper-rustls.git", branch = "main", features = [
    "tokio-runtime",
    "dangerous_configuration",
    "tls12",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
cityhash-sys = { git = "https://jihulab.com/wireguard/cityhash-sys.git", version = "1.0.1", branch = "master" }
rb64 = { version = "0.1.0", path = "../base64" }
