[package]
name = "fmedia"
version = "0.2.1"
edition = "2021"
exclude = [".gitignore"]
license = "MIT"
description = "Get file media type or suffix"
authors = ["Liangcheng Juves <liangchengj@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git", rev = "7324c83a9212d6052993001dcd0ac5d617ae87ce", version = "1.4.0" }
lazy_static = "1.4.0"
