[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
mysql = { version = "24.0.0", features = ["minimal"] }
lazy_static = "1.4.0"
