[package]
name = "rconio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
libc = "0.2.113"

[target.'cfg(windows)'.dependencies.windows]
version = "0.37.0"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
]

[[bin]]
name = "rconio-win"
path = "src/bin/main.rs"
