[package]
name = "rust-jni"
version = "0.1.0"
authors = ["Liangcheng Juves <liangchengj@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "*", default-features = false }

[lib]
crate_type = ["cdylib"]