[package]
name = "xlsx-example"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "genrobot"
path = "src/main.rs"

[dependencies]
calamine = "0.18.0"
reqwest = "0.11.6"
hyper = "0.14.15"
hyper-tls = "0.5.0"
jwt = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.8"
guid-create = "0.1.1"
qrcode = "0.12.0"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
# rhexstr = { version = "0.1.0", path = "../hex-string" }
# rrflect = { version = "0.1.0", path = "../rrflect" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
lazy_static = "1.4.0"

[dependencies.bytes]
version = "1.0"
