[package]
name = "xlsx-example"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "genrobot"
# path = "src/main.rs"

[dependencies]
calamine = "0.18.0"
hyper = { version = "0.14.15", features = ["full"] }
hyper-tls = "0.5.0"
bytes = "1.0"
biscuit = "0.5.0"
guid-create = "0.1.1"
qrcode = "0.12.0"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
lazy_static = "1.4.0"
clearscreen = "1.0.9"
ssri = "7.0.0"
toml = "0.5.8"
Boa = "0.13.0"
regex = "1.5.4"

[build-dependencies]
embed-resource = "1.6.5"

[profile.release]
opt-level = "s"
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16

[profile.release.build-override]
opt-level = "s"
codegen-units = 16
