[package]
name = "xlsx-example"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "genrobot"
path = "src/main.rs"

[dependencies]
calamine = "0.18.0"
hyper = { version = "0.14.17", features = ["http1"] }
hyper-tls = "0.5.0"
bytes = "1.1.0"
biscuit = "0.5.0"
guid-create = "0.2.0"
qrcode = "0.12.0"
clap = "2.34.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
lazy_static = "1.4.0"
clearscreen = "1.0.9"
ssri = "7.0.0"
toml = "0.5.8"
Boa = "0.13.0"
ruimpl = "0.1.0"
promises = { version = "0.1.0", path = "../promises" }

[dependencies.regex]
version = "1.5.4"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]

# [build-dependencies]
# embed-resource = "1.6.5"

[profile.release]
opt-level = "s"
debug = false
split-debuginfo = 'packed' # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
strip = true

[profile.release.build-override]
opt-level = "s"
codegen-units = 16
