[package]
name = "xlsx_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = "0.11.6"
tokio = { version = "1", features = ["full"] }

[dependencies.bytes]
version = "1.0"